# fumadocs-openapi

./: README.md  mdx-components.tsx  next.config.mjs  package.json  pnpm-lock.yaml  train-openapi.json  train-openapi.yaml
app/: global.css  layout.tsx
app/api/chat/: route.ts
app/api/search/: route.ts
app/docs/: layout.tsx
app/docs/[[...slug]]/: page.tsx
components/: aiSearch.tsx  api-page.tsx  search.tsx
components/layout/docs/: index.tsx  sidebar.tsx
components/layout/docs/page/: client.tsx  index.tsx
content/docs/: create-booking-payment.mdx  create-booking.mdx  delete-booking.mdx  get-booking.mdx  get-bookings.mdx  get-stations.mdx  get-trips.mdx  index.mdx  new-booking.mdx
content/docs/bookings/: create-booking.mdx  delete-booking.mdx  get-bookings.mdx
content/docs/helpers/: searchIndex.ts
content/docs/payments/: create-booking-payment.mdx
content/docs/stations/: get-stations.mdx
content/docs/trips/: get-trips.mdx  meta.json
lib/: openapi.ts
llama-index/: .gitignore  main.py  practice1.ipynb  pyproject.toml
llama-index/helicone/: docker-compose.yml
llama-index/litellm/: .env.sample  config.yaml  docker-compose.yml  prometheus.yml
llama-index/phoenix/: docker-compose.yml
scripts/: generate-docs.ts
