[project]
name = "llama-index-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arize-phoenix-otel>=0.14.0",
    "ipykernel>=7.1.0",
    "llama-index>=0.14.13",
    "llama-index-callbacks-arize-phoenix>=0.6.1",
    "llama-index-llms-helicone>=0.1.1",
    "llama-index-llms-litellm>=0.6.3",
    "openinference-instrumentation-llama-index>=4.3.9",
    "python-dotenv>=1.2.1",
]
